# partcle_sim

./: .gitignore  COMSOL_COPILOT_HANDOFF.md  DOC_INDEX_V28.md  FAST_KERNELS_V28.md  GEOMETRY_TRUTH_SHEAR_PROVIDER_V28.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS_V28.md  NUMERICS_ARCHITECTURE_REVIEW_20260404.md  README.md  STABILIZATION_RELEASE_V29.md  STEP_AWARE_SOURCE_OUTPUT_V28.md  pyproject.toml  report.md  run_from_yaml.py
data/: argon_gec_ccp_base2.mphtxt  regridded_repo_field_bundle_argon_gec_ccp_base2_2d.npz
demo_output/: _tmp_retry_splits6.yaml  _tmp_retry_splits6_abs.yaml
docs/: numerics_architecture_audit_20260404.md  numerics_contract.md  numerics_remaining_tasks_20260405.md
particle_tracer_unified/: cli.py
particle_tracer_unified.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plans/: boundary_performance_plan.md  brownian_langevin_motion_plan.md  comsol_case_onboarding_workflow.md
schemas/: process_steps.example.csv  recipe_manifest.example.yaml  run_config.example.yaml  run_config.schema.json
tests/: regression_test.py  smoke_test.py  test_charge_model.py  test_comsol_icp_export.py  test_comsol_particle_export.py  test_force_registry.py  test_run_summary_tools.py  test_wall_catalog_alignment.py
tools/: build_comsol_case.py  check_stability_profile.py  collect_run_summaries.py  compare_against_reference.py  enforce_outward_source_velocity.py  evaluate_valid_mask_rollout.py  export_boundary_diagnostics_visuals.py  export_mechanics_visuals.py  export_result_graphs.py  export_trajectory_animation.py  state_contract.py  (+2 more)
(+662 files in other folders)
