[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "particle-tracer-unified"
version = "0.1.0"
description = "Particle trajectory solver for supplied 2D/3D fields and explicit boundary data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "numba>=0.58",
  "scipy>=1.10"
]

[project.scripts]
particle-tracer-run = "particle_tracer_unified.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["particle_tracer_unified*"]
